--- a/Training/RL_for_LLMs.ipynb
+++ b/Training/RL_for_LLMs.ipynb
@@ -3161,7 +3161,7 @@
         "2. **Fast to compute**: Simple word counting is very efficient\n",
         "3. **Easy to understand**: The logic is straightforward\n",
         "\n",
-        "However, we can point out some clear reasons that this would be an *ununseful* reward function in practice:\n",
+        "However, we can point out some clear reasons that this would be an *unuseful* reward function in practice:\n",
         "1. **Easy to game**: Model could just repeat positive words\n",
         "2. **Misses context**: \"Not good\" counts as positive\n",
         "3. **Ignores quality**: Well-written neutral text scores lower than poorly written positive text (see second example vs last)\n",
@@ -3650,7 +3650,7 @@
         "Consider in this example that we have generated so far:\n",
         "<h5><center>\"I  am  feeling  great  and  happy  today, it's \"</center></h5>\n",
         "\n",
-        "And we are tasked with determining if the new word that we could generate: <h5><center>\"excellent\"<h5></center> is advatageous or not.\n",
+        "And we are tasked with determining if the new word that we could generate: <h5><center>\"excellent\"<h5></center> is advantageous or not.\n",
         "\n",
         "The current policy (model) generates \"excellent\" with probability 0.3, and the new proposed policy we're evaluating generates \"excellent\" with probability 0.6.\n",
         "\n",
@@ -4112,7 +4112,7 @@
         "\n",
         "Ok. We're ready to put together a full simple pipeline of doing reinforcement learning on an LLM!\n",
         "\n",
-        "We'll make use of the [`trl`](https://huggingface.co/docs/trl/v0.10.1/en/index) library to handle the PPO part. We'll see below how this library handles all of the \"difficult\" parts of implenting reinforcement learning for us.\n",
+        "We'll make use of the [`trl`](https://huggingface.co/docs/trl/v0.10.1/en/index) library to handle the PPO part. We'll see below how this library handles all of the \"difficult\" parts of implementing reinforcement learning for us.\n",
         "\n",
         "> 📌 <font color=\"#996565\">**Note**: In this tutorial, we are using a downgraded version of `trl`, 0.10.1. I found this version was easier to use and understand the code for. Make sure if you read the docs while going through this tutorial to switch them to that version, as more updated versions changed syntax somewhat drastically!</font>\n",
         "\n"
