--- a/Training/RL_for_LLMs.ipynb
+++ b/Training/RL_for_LLMs.ipynb
@@ -4994,7 +4994,7 @@
       "source": [
         "# 4. From Algorithmic Rewards to Human Feedback (RLHF)\n",
         "\n",
-        "So far, we've implemented a reinforcement learning pipeline that uses a **defined (algorithmic)** reward. However, most modern LLM's undergo a training portion of reinforcement learning **from human feedback**, where humans looking at respones and marking them as *good vs bad* or *better vs worse* provides direct feedback to the model.\n",
+        "So far, we've implemented a reinforcement learning pipeline that uses a **defined (algorithmic)** reward. However, most modern LLM's undergo a training portion of reinforcement learning **from human feedback**, where humans looking at responses and marking them as *good vs bad* or *better vs worse* provides direct feedback to the model.\n",
         "\n",
         "Luckily, the same PPO framework we've already discussed is used to implement this sort of feedback loop, so this is really just a small extension to what we've already discussed!"
       ],
