add website link

--- a/Training/RL_for_LLMs.ipynb
+++ b/Training/RL_for_LLMs.ipynb
@@ -38,6 +38,7 @@
         "# Reinforcement Learning for LLM's\n",
         "> In this notebook, we'll dive deep into how LLM's are trained using reinforcement learning, exploring how we can implement this type of training on an existing, small model to better guide our desired responses!\n",
         "\n",
+        "See this notebook @ apetulante.github.io!\n"
         "### What is reinforcement learning?\n",
         "In a typical LLM training paradigm, models are first trained in an **self-supervised** manner to predict a masked-out word. This makes them great at understanding how language is constructed, and helps us to make giant datasets very easily.\n",
         "\n",
